
2022-12-13  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cb_warn_opt_val, get_warn_opt_value, set_warn_opt_value), cobc.h:
	  renamed cb_warn_opt_val to warn_opt_val and keep local, provide typed
	  functions to get/set the internal option with the "real" type for improved
	  type checks and internal cobc debugging
	* cobc.c, error.c, field.c, parser.y, pplex.l, tree.c, typeck.c: adjusted
	  to use new get_warn_opt_value / set_warn_opt_value functions
	* codegen.c (output_index): fix bug #832 binary-char unsigned not usable
	  as subscript

2022-12-12 Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize): added missing generation of runtime checks
	  for INITIALIZE (again?)
	* typeck.c (cb_build_move): optimized (=identical) generation for MOVE no
	  matter if runtime checks are enabled or not (speed + identical behavior)
	* codegen.c (output_initial_values): don't do any init for TYPEDEFs,
	  as these are only prototypes and otherwise lead to actual storage
	  (and useless init)
	* codegen.c (output_display_fields): don't dump TYPEDEFs

2022-12-09  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	FR 426 Default collation option
	* flag.def, cobc.c (process_command_line): add new default-colseq flag
	* tree.h, parser.y (cb_deciph_default_colseq_name): new helper function
	* parser.y (build_default_colseq, setup_default_colseq, setup_program):
	  initialize default collating sequence for programs when the
	  default-colseq flag is not NATIVE

2022-12-08 Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (items_have_same_data_clauses): fix handling for ANY LENGTH
	  parameters, fixing bug #851
	* parser.y: fixes for prototype checking
	* typeck.c: work on warning messages for prototype checking
	* typeck.c (error_if_signatures_differ): add check for ENTRY-CONVENTION
	* typeck.c (cb_validate_program_environment): fixed bad test of warning
	  option for CLASS check
	* typeck.c (cb_emit_sort_init): minor refactoring